<resources>
    <string name="app_name">Xperia5 II Tweaks</string>
    <string name="title_activity_settings">X5II Tweaks Settings</string>

    <string name="hint_disable_app_list">Note: Disable App List mode in EdXposed Manager to use this module. Modified values take effect after a reboot.</string>
    <string name="hint_top">Note: Only Android 11 Sony Xperia 5 II stock ROM is supported. Runs only on latest LSPosed.</string>
    <string name="input_volte_width_title">Width of VoLTE icon (dp, 0~100)</string>
    <string name="input_volte_width_description">Set as -2 to use original icon\'s width</string>
    <string name="input_volte_height_title">Height of VoLTE icon (dp, 0~50)</string>
    <string name="input_volte_height_description">Set as -2 to use original icon\'s height</string>
    <string name="input_volte_margin_end_title">Ending margin of VoLTE icon (dp, 0~40)</string>
    <string name="input_volte_margin_end_description">Setting this to -1 means using system default value.</string>
    <string name="input_volte_icon_title">VoLTE icon</string>
    <string name="hint_not_in_range">Unable to set: You must input a value in range.</string>
    <string name="hint_dangerous_nav_bar_tweak">Warning: customizing Nav Bar layout string can be very dangerous. Make sure you understand what the string means and there is nothing wrong before modification!</string>
    <string name="input_nav_bar_layout_str_title">Navigation bar layout string</string>
    <string name="input_nav_bar_layout_str_description">Empty (or string with only whitespace characters) means no modification</string>
    <string name="input_double_tap_on_aod_to_wake">Double tap on Always On Display (Ambient Display) to wake</string>
    <string name="reverse_launcher_all_app_own_order">Reverse Own Order of \"All Apps\" in Launcher</string>
    <string name="hint_dangerous_reverse_order">Note: if you enabled \"Reverse Own Order of \'All Apps\' in Launcher\", do not adjust order of the apps !</string>
    <string name="input_qs_rows_title">Rows of QS Panel</string>
    <string name="input_qs_rows_description">Set as \"the Rows you expected + 1\"</string>

</resources>